
syntax = "proto3";

package stream;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "erd.proto";

option go_package                      = "gen";
option (gogoproto.marshaler_all)       = true;
option (gogoproto.sizer_all)           = true;
option (gogoproto.unmarshaler_all)     = true;
option (gogoproto.goproto_getters_all) = false;

message StreamPayload {
  enum Event {
    NEW    = 0;
    MOD    = 1;
    DELETE = 2;
  }

  Event event = 1;
  oneof object {
    erd.Entity entity = 2;
    erd.Rel rel       = 3;
  }
}

service StreamService { rpc Receive(erd.Empty) returns (stream StreamPayload); }
